Overhauled login systems and UI

--- a/modules/battleplans/templates/battleplans.html
+++ b/modules/battleplans/templates/battleplans.html
@@ -48,7 +48,7 @@
       <h2>Careful</h2>
       <p>
         You are editing a Battle Plan for a day other than today.<br>
-        Make sure that’s really what you intend.
+        Make sure that's really what you intend.
       </p>
       <div class="modal-actions">
         <button id="bp-warning-cancel">Cancel</button>
@@ -59,6 +59,7 @@
   <div id="bp-help-modal" class="hidden">
     <div class="modal-content">
       <h3>What is a Battle Plan?</h3>
+      <p>Shorthand: BP</p>
       <p>
         A Battle Plan is, basically, a to-do list for your workday,
         including what metrics you need to hit to do well.
