--- a/modules/login/templates/index.html
+++ b/modules/login/templates/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Login</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/login/css/index.css">
   <link rel="stylesheet" href="/static/register/css/toast.css">
 </head>
 <body>
-<noscript>
-  <h2>JavaScript is disabled!</h2>
-  <p>Please enable JavaScript to use this site.</p>
-</noscript>
-<!-- TODO: Make this bigger on mobile -->
-<div class="login-container">
-  <h2>Login</h2>
-  <form id="form">
-    <label>
-      <input type="text" name="username" placeholder="Username" required>
-    </label>
-    <label>
-      <input type="password" name="password" placeholder="Password" required>
-    </label>
-    <button type="submit">Log In</button>
-  </form>
-  <label>
+  <noscript>
+    <h2>JavaScript is disabled!</h2>
+    <p>Please enable JavaScript to use this site.</p>
+  </noscript>
+
+  <div class="login-container">
+    <h2>Secure Login</h2>
+
+    <!-- Theme Toggle -->
+    <button id="theme-toggle-login" type="button">🌙 Switch Theme</button>
+
+    <form id="form" autocomplete="off">
+      <label>
+        <input type="text" name="username" placeholder="Username" required>
+      </label>
+      <label>
+        <input type="password" name="password" placeholder="Password" required>
+      </label>
+      <button type="submit">Log In</button>
+    </form>
     <a id="reg_btn" href="/register">Register Instead</a>
-  </label>
+  </div>
+
   <script src="/static/login/js/login.js"></script>
   <script src="/static/register/js/toast.js"></script>
-</div>
 </body>
 </html>
