--- a/modules/battleplans/templates/battleplans.html
+++ b/modules/battleplans/templates/battleplans.html
@@ -14,6 +14,7 @@
     <h1>Battle Plans</h1>
     <button id="back-btn">Go Back</button>
     <button id="add-plan-btn">New Battle Plan</button>
+    <button id="theme-toggle-btn">Toggle Theme</button>
     <input type="text" id="search-bar" placeholder="Search...">
     <div id="plans-container">
       <!-- Battle plans will be dynamically added here -->
